# quinn

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  build.sh  chain.txt  pyproject.toml  setup.py
apps/: nn_fit.py
docs/: requirements.txt
docs/source/: cheatsheet.txt  conf.py  diagram.rst  ens.rst  examples.rst  func.rst  ind.rst  index.rst  intro.rst  loss.rst  math.rst  mcmc.rst  nnarch.rst  nnfit.rst  nns.rst  quinn.rst  references.bib  refs.rst  rvar.rst  solvers.rst  tests.rst  tests.rst_  utils.rst  vi.rst
docs/source/_static/: custom.css
examples/: ex_fit.py  ex_fit_2d.py  ex_loss.py  ex_lreg_hmc.py  ex_lreg_mcmc.py  ex_ufit.py
quinn/: __init__.py  quinn.py
quinn/ens/: __init__.py  dropout.py  ens.py  laplace.py  learner.py  rms.py  swag.py
quinn/func/: __init__.py  funcs.py
quinn/mcmc/: __init__.py  admcmc.py  hmc.py  mala.py  mcmc.py  posterior_funcs.py
quinn/nns/: __init__.py  losses.py  mlp.py  nnbase.py  nnfit.py  nns.py  nnwrap.py  posterior_funcs.py  rnet.py  tchutils.py
quinn/rvar/: __init__.py  rvs.py
quinn/solvers/: __init__.py  nn_ens.py  nn_laplace.py  nn_mcmc.py  nn_rms.py  nn_swag.py  nn_vi.py  quinn.py
quinn/utils/: __init__.py  datasets.py  decors.py  maps.py  metrics.py  plotting.py  stats.py  xutils.py
quinn/vi/: __init__.py  bnet.py  rvs.py  vi.py
tests/: test_ensemble.py  test_funcs.py  test_losses.py  test_maps.py  test_mcmc.py  test_mlp.py  test_nnfit.py  test_nnwrap.py  test_rvar.py  test_solvers.py  test_stats.py  test_tchutils.py  test_vi.py  test_xutils.py
